# FastPng

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/suwell/fastpng/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/suwell/fastpng/: AppOpsUtils.java  LaunchActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/suwell/fastpng/: ExampleUnitTest.java
fastpng/: build.gradle
fastpng/src/androidTest/java/com/mayohn/fastpng/: ExampleInstrumentedTest.java
fastpng/src/main/: AndroidManifest.xml
fastpng/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fastpng/src/main/cpp/libpng/: png.h  pngwrite.c
fastpng/src/main/java/com/mayohn/fastpng/: ImgUtils.java
fastpng/src/test/java/com/mayohn/fastpng/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
